--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Приложение для партнеров-риелторов с мини-играми, магазином призов и новостями.",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
