--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.378.0",
     "pg": "^8.16.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "xml2js": "^0.6.2"  // <--- ВОТ ЭТУ СТРОКУ ДОБАВИТЬ
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
