--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "xml2js": "^0.6.2"  // <--- ВОТ ЭТУ СТРОКУ ДОБАВИТЬ
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
