--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "partner-build",
   "version": "1.0.0",
   "type": "module",
-  "description": "Приложение для партнеров-риелторов",
+  "description": "Приложение для партнеров-риелторов с мини-играми, магазином призов и новостями.",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,7 +17,8 @@
     "lucide-react": "^0.378.0",
     "pg": "^8.16.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
