--- a/package.json
+++ b/package.json
@@ -2,31 +2,29 @@
   "name": "partner-build",
   "version": "1.0.0",
   "type": "module",
-  "description": "Приложение для партнеров-риелторов с мини-играми, магазином призов и новостями.",
+  "description": "Приложение для партнеров-риелторов",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "start": "node server/index.js"
   },
   "dependencies": {
-    "@twa-dev/sdk": "^8.0.2",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.0",
+    "@google/genai": "^0.1.2",
     "lucide-react": "^0.378.0",
-    "node-cron": "^3.0.3",
-    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "xml2js": "^0.6.2"
+    "express": "^4.19.2",
+    "better-sqlite3": "^9.4.3",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.4.5",
-    "vite": "^5.2.10"
+    "vite": "^5.2.10",
+    "@types/better-sqlite3": "^7.6.9",
+    "@types/express": "^4.17.21"
   }
 }
